configmap-fp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
apiVersion: v1
kind : Secret
metadata :
  name: secret-fb
  namespace: production
type: Opaque
data:
  DB_USER: cm9vdA==
  DB_PASS: dmhpY28xMjM=
